# TripleTriadHelper

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: Board.hpp  CardData.hpp  Rules.hpp  io-util.hpp
src/: Board.cpp  Board.hpp  CMakeLists.txt  CardData.cpp  CardData.csv  Rules.cpp  Rules.hpp  analysis-onecard.cpp  analysis.cpp  io-util.cpp  main.cpp
tests/: CMakeLists.txt  dynamic-programming-test.cpp  eval-test.cpp  hash-test.cpp  io-test.cpp  play-test.cpp  test.cpp
